<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ACTC TimeTrial Tracker</string>
    <string name="action_clear">Clear Data</string>
    <string name="list_header_rider">Rider</string>
    <string name="list_header_time">Time</string>
    <string name="action_add_rider">Manage Riders</string>
    <string name="action_rider_stats">Rider Stats</string>
    <string name="action_lap_stats">Lap Stats</string>
    <string name="action_delete_rider">Remove Rider</string>
    <string name="action_edit_rider">Edit Rider</string>
    <string name="action_clear_riders">Delete All Riders</string>
    <string name="action_clear_laps">Delete All Laps</string>
    <string name="action_clear_everything">Delete Databases</string>
    <string name="action_share">Share</string>
    <string name="title_activity_add_rider">Add Rider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="acknowledge_delete_riders_title">Clear Riders</string>
    <string name="acknowledge_delete_riders_msg">Are you sure you want to clear all the riders\' data?</string>
    <string name="acknowledge_delete_laps_title">Clear Laps</string>
    <string name="acknowledge_delete_laps_msg">Are you sure you want to clear all the lap data?</string>
    <string name="acknowledge_delete_everything_title">Clear All Data</string>
    <string name="acknowledge_delete_everything_msg">Are you sure you want to clear all the time trial data?</string>
    <string name="dlg_add">Add</string>
    <string name="dlg_next">Next</string>
    <string name="dlg_yes">Yes</string>
    <string name="dlg_no">No</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rider_name_hint">Rider Name</string>
    <string name="add_rider_title">Add Rider</string>
    <string name="riderBtnStart">Start Rider</string>
    <string name="riderBtnCheckin">Checkin Rider</string>
    <string name="title_activity_ttlap_splits">Lap Splits</string>
    <string name="std_dev_title">Std-Dev</string>
    <string name="avg_lap_title">Avg Lap</string>
    <string name="title_activity_ttrider_stats">Rider Stats</string>
    <string name="remove">Remove Rider</string>
    <string name="cancel">Cancel</string>
    <string name="set_menu_item">"Selected Rider"</string>
    <string name="cancelremove">Canceled Remove</string>
    <string name="acknowledgeremove_title">Remove Rider</string>
    <string name="acknowledgeremove_msg">Are you sure you want to remove this rider?</string>
    <string name="btn_add_rider">Add Rider</string>
    <string name="nothing_selected">Nothing Selected!</string>
    <string name="rider_laps_title">Laps:</string>
    <string name="last_seen_title">Last Seen:</string>
    <string name="longclick_toast">Hold Stop button to Stop Timer</string>
    <string name="send_to">Share Lap Data...</string>
    <string name="action_preferences">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="SettingsPanel_Title">Settings</string>
    <string name="SettingsPanel_Summary">Application Settings</string>
    <string name="saved_max_laps">max_laps</string>
    <string name="saved_app_options">options</string>
    <string name="app_options_title">Options</string>
    <string name="saved_prevent_screen_sleep">no_screen_sleep</string>
    <string name="ScreenSleepCheck_Summary">Don\'t allow the device screen to sleep while tracking the time trial</string>
    <string name="ScreenSleepCheck_Title">Prevent Screen Sleep</string>
    <string name="max_laps_title">Max Laps</string>
    <string name="num_laps_title">Numer of laps</string>
    <string name="max_laps_summary">Maximum number of laps for the current time trial. Riders will drop from main screen when they\'ve ridden this number of laps.</string>
</resources>
