<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >


	<PreferenceCategory
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="@string/saved_app_options"
        android:title="@string/app_options_title" >

        <CheckBoxPreference
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="@string/saved_prevent_screen_sleep"
            android:summary="@string/ScreenSleepCheck_Summary"
            android:title="@string/ScreenSleepCheck_Title"
            android:defaultValue="true"
        />
        <com.ridgway.timetrialtracker.NumberPickerPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="@string/saved_max_laps"
            android:title="@string/max_laps_title"
            android:summary="@string/max_laps_summary"
            android:dialogTitle="@string/max_laps_title"
            android:dialogMessage="@string/num_laps_title"
            android:defaultValue="5"
            android:numeric="integer"
            />


    </PreferenceCategory>

	
</PreferenceScreen>
