<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TimeTrialActivity" >
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        android:icon="@drawable/ic_action_action_settings"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_add_rider"
        android:title="@string/action_add_rider"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_rider_stats"
        android:title="@string/action_rider_stats"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_lap_stats"
        android:title="@string/action_lap_stats"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
